--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,28 +12,6 @@ jobs:
         with:
           go-version: 1.18
 
-      - name: Deploy
-        uses: appleboy/ssh-action@v0.1.2
-
-        with:
-          host: ${{secrets.SSH_HOST}} # IP address of the server you wish to ssh into
-          key: ${{secrets.SSH_KEY}} # Private or public key of the server
-          username: ${{ secrets.SSH_USERNAME }} # User of the server you want to ssh into
-
-          script: |
-            export NVM_DIR=~/.nvm
-            source ~/.nvm/nvm.sh    
-
-            export GO_DIR=/usr/local/go
-            source /usr/local/go/bin/go
-
-            cd /root
-            cd go
-            cd deploying
-
-            echo "Cloning Git Repo to /root/deploying"
-            git clone https://aldhanekaa:${{secrets.GITHUB_TOKEN}}@github.com/aldhanekaa/Golang-audio-chat.git
-
       - name: SCP to Ocean
         uses: appleboy/scp-action@master
         with:
@@ -46,3 +24,35 @@ jobs:
 
       - name: Build app
         run: go build
+
+      - name: Deploy App and Deploy FE
+        uses: appleboy/ssh-action@v0.1.2
+
+        with:
+          host: ${{secrets.SSH_HOST}} # IP address of the server you wish to ssh into
+          key: ${{secrets.SSH_KEY}} # Private or public key of the server
+          username: ${{ secrets.SSH_USERNAME }} # User of the server you want to ssh into
+
+          script: |
+            export NVM_DIR=~/.nvm
+            source ~/.nvm/nvm.sh    
+
+            echo "Moving Builded Golang Source to /root/go/Golang-audio-chat"
+            rm -rf /root/go/Golang-audio-chat
+            mv /root/go/deploying/Golang-audio-chat /root/go/Golang-audio-chat
+
+            cd client
+            npm i
+            npm run build
+
+            echo "Moving FrontEnd to /var/www/golang-webchat.sg.aldhaneka.me"
+            rm -rf /var/www/golang-webchat.sg.aldhaneka.me
+            mv dist /var/www/golang-webchat.sg.aldhaneka.me
+
+            cd ..
+            rm -rf client
+
+            sudo systemctl stop golang-webchat.service
+            sudo systemctl start golang-webchat.service
+
+            sudo service nginx reload
