--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,21 +12,7 @@ jobs:
         with:
           go-version: 1.18
 
-      - name: SCP to Ocean
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{secrets.SSH_HOST}} # IP address of the server you wish to ssh into
-          key: ${{secrets.SSH_KEY}} # Private or public key of the server
-          username: ${{ secrets.SSH_USERNAME }} # User of the server you want to ssh into
-
-          port: 22
-          source: 'app'
-          target: '/root/go/deploying/Golang-audio-chat'
-
-      - name: Build app
-        run: go build
-
-      - name: Deploy App and Deploy FE
+      - name: Deploy
         uses: appleboy/ssh-action@v0.1.2
 
         with:
@@ -38,22 +24,25 @@ jobs:
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh    
 
-            echo "Moving Builded Golang Source to /root/go/Golang-audio-chat"
-            rm -rf /root/go/Golang-audio-chat
-            mv /root/go/deploying/Golang-audio-chat /root/go/Golang-audio-chat
+            export GO_DIR=/usr/local/go
+            source /usr/local/go/bin/go
 
-            cd client
-            npm i
-            npm run build
+            cd /root
+            cd go
+            cd deploying
 
-            echo "Moving FrontEnd to /var/www/golang-webchat.sg.aldhaneka.me"
-            rm -rf /var/www/golang-webchat.sg.aldhaneka.me
-            mv dist /var/www/golang-webchat.sg.aldhaneka.me
+            echo "Cloning Git Repo to /root/deploying"
+            git clone https://aldhanekaa:${{secrets.GITHUB_TOKEN}}@github.com/aldhanekaa/Golang-audio-chat.git
 
-            cd ..
-            rm -rf client
+      - name: SCP to Ocean
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{secrets.SSH_HOST}} # IP address of the server you wish to ssh into
+          key: ${{secrets.SSH_KEY}} # Private or public key of the server
+          username: ${{ secrets.SSH_USERNAME }} # User of the server you want to ssh into
 
-            sudo systemctl stop golang-webchat.service
-            sudo systemctl start golang-webchat.service
+          source: 'app'
+          target: '/root/go/deploying/Golang-audio-chat'
 
-            sudo service nginx reload
+      - name: Build app
+        run: go build
