--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           go-version: 1.18
 
-      - name: Deploy
+      - name: Deploy App and Deploy
         uses: appleboy/ssh-action@v0.1.2
 
         with:
@@ -34,15 +34,6 @@ jobs:
             echo "Cloning Git Repo to /root/deploying"
             git clone https://aldhanekaa:${{secrets.GITHUB_TOKEN}}@github.com/aldhanekaa/Golang-audio-chat.git
 
-      - name: SCP to Ocean
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{secrets.SSH_HOST}} # IP address of the server you wish to ssh into
-          key: ${{secrets.SSH_KEY}} # Private or public key of the server
-          username: ${{ secrets.SSH_USERNAME }} # User of the server you want to ssh into
-
-          source: 'app'
-          target: '/root/go/deploying/Golang-audio-chat'
-
-      - name: Build app
-        run: go build
+            echo "Building Golang source"
+            cd Golang-audio-chat
+            go build
