--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,10 +7,24 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.18
+      - name: Set up Go 1.13
         uses: actions/setup-go@v1
         with:
           go-version: 1.18
+
+      - name: SCP to Ocean
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{secrets.SSH_HOST}} # IP address of the server you wish to ssh into
+          key: ${{secrets.SSH_KEY}} # Private or public key of the server
+          username: ${{ secrets.SSH_USERNAME }} # User of the server you want to ssh into
+          password: ${{ secrets.SSH_PASSWORD }}
+
+          source: 'app'
+          target: '/root/go/deploying/Golang-audio-chat'
+
+      - name: Build app
+        run: go build
 
       - name: Deploy App and Deploy
         uses: appleboy/ssh-action@v0.1.2
@@ -24,4 +38,12 @@ jobs:
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh    
 
-            /usr/local/go/bin/go
+            export GO_DIR=/usr/local/go
+            source /usr/local/go/bin/go
+
+            cd /root
+            cd go
+            cd deploying
+
+            echo "Cloning Git Repo to /root/deploying"
+            git clone https://aldhanekaa:${{secrets.GITHUB_TOKEN}}@github.com/aldhanekaa/Golang-audio-chat.git
