--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
 
           host: ${{secrets.SSH_HOST}} # IP address of the server you wish to ssh into
 
-          source: 'app'
+          source: 'app/*'
           target: '/root/go/deploying/Golang-audio-chat'
 
       - name: Build app
