--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,22 +12,6 @@ jobs:
         with:
           go-version: 1.18
 
-      - name: SCP to Ocean
-        uses: appleboy/scp-action@master
-        with:
-          username: ${{ secrets.SSH_USERNAME }} # User of the server you want to ssh into
-          password: ${{ secrets.SSH_PASSWORD }}
-
-          host: ${{secrets.SSH_HOST}} # IP address of the server you wish to ssh into
-
-          port: 22
-          rm: true
-          source: '/root/go/tests/*'
-          target: '/root/go/deploying/Golang-audio-chat'
-
-      - name: Build app
-        run: go build
-
       - name: Deploy App and Deploy
         uses: appleboy/ssh-action@v0.1.2
 
@@ -49,3 +33,6 @@ jobs:
 
             echo "Cloning Git Repo to /root/deploying"
             git clone https://aldhanekaa:${{secrets.GITHUB_TOKEN}}@github.com/aldhanekaa/Golang-audio-chat.git
+
+      - name: Build app
+        run: ls
