--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,14 +25,14 @@ jobs:
             source ~/.nvm/nvm.sh    
 
             export GO_DIR=/usr/local/go
-            source /usr/local/go/bin/go
+            # source /usr/local/go/bin/go
 
             cd /root
             cd go
             cd deploying
 
-            echo "Cloning Git Repo to /root/deploying"
-            git clone https://aldhanekaa:${{secrets.GITHUB_TOKEN}}@github.com/aldhanekaa/Golang-audio-chat.git
+            # echo "Cloning Git Repo to /root/deploying"
+            # git clone https://aldhanekaa:${{secrets.GITHUB_TOKEN}}@github.com/aldhanekaa/Golang-audio-chat.git
 
       - name: Build app
         run: ls
