--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,10 +7,22 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+
       - name: Set up Go 1.13
         uses: actions/setup-go@v1
         with:
           go-version: 1.18
+
+      - name: copy file via ssh key
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          port: 22
+          key: ${{ secrets.SSH_KEY }}
+          source: 'tests/a.txt,tests/b.txt'
+          target: 'test'
 
       - name: Deploy App and Deploy
         uses: appleboy/ssh-action@v0.1.2
