check /Users/aldhanekaaufaizzat/miniforge3/bin:/Users/aldhanekaaufaizzat/miniforge3/condabin:/opt/local/bin:/opt/local/sbin:/Library/Frameworks/Python.framework/Versions/3.9/bin:/opt/homebrew/bin:/opt/homebrew/sbin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/go/bin:/usr/local/share/dotnet:~/.dotnet/tools:/Library/Frameworks/Mono.framework/Versions/Current/Commands:/Users/aldhanekaaufaizzat/.local/bin:/Users/aldhanekaaufaizzat/.fig/bin:/Users/aldhanekaaufaizzat/.local/bin:/Users/aldhanekaaufaizzat/.local/bin:/Users/aldhanekaaufaizzat/.local/bin:/Users/aldhanekaaufaizzat/Documents/dev/flutter/flutter/bin

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,11 +23,15 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }} # User of the server you want to ssh into
 
           script: |
+
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh    
 
             export GO_DIR=/usr/local/go
             # source /usr/local/go/bin/go
+
+            echo $PATH
+
 
             cd /root
             cd go
@@ -37,6 +41,7 @@ jobs:
             git clone https://aldhanekaa:${{secrets.GITHUB_TOKEN}}@github.com/aldhanekaa/Golang-audio-chat.git
 
             cd Golang-audio-chat
-            chmod +x ./deploy.sh
 
-            ./deploy.sh
+            # chmod +x ./deploy.sh
+
+            # ./deploy.sh
