--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,8 @@ jobs:
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh    
 
+            export $PATH=$PATH:/usr/local/go/bin/go
+
             export GO_DIR=/usr/local/go
             # source /usr/local/go/bin/go
 
@@ -34,6 +36,8 @@ jobs:
 
             echo $GOPATH
             echo $GOBIN
+
+            go env
 
 
             cd /root
