complete deploy action workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,19 +29,6 @@ jobs:
 
             PATH="/usr/local/go/bin/:$PATH"
 
-            # export GO_DIR=/usr/local/go
-            # source /usr/local/go/bin/go
-
-            echo $PATH
-
-            echo $GOPATH
-            echo $GOBIN
-
-            go
-
-            /usr/local/go/bin/go env
-
-
             cd /root
             cd go
             cd deploying
@@ -49,8 +36,26 @@ jobs:
             echo "Cloning Git Repo to /root/deploying"
             git clone https://aldhanekaa:${{secrets.GITHUB_TOKEN}}@github.com/aldhanekaa/Golang-audio-chat.git
 
+            echo "Building Golang source"
             cd Golang-audio-chat
+            go build
 
-            # chmod +x ./deploy.sh
+            echo "Moving Builded Golang Source to /root/go/Golang-audio-chat"
+            rm -rf /root/go/Golang-audio-chat
+            mv /root/go/deploying/Golang-audio-chat /root/go/Golang-audio-chat
 
-            # ./deploy.sh
+            cd client
+            npm i
+            npm run build
+
+            echo "Moving FrontEnd to /var/www/golang-webchat.sg.aldhaneka.me"
+            rm -rf /var/www/golang-webchat.sg.aldhaneka.me
+            mv dist /var/www/golang-webchat.sg.aldhaneka.me
+
+            cd ..
+            rm -rf client
+
+            sudo systemctl stop golang-webchat.service
+            sudo systemctl start golang-webchat.service
+
+            sudo service nginx reload
